--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>网站建设当中ing</h1>
     <iframe src="//player.bilibili.com/player.html?aid=59549425&cid=103748975&page=1"
-            scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="500"> </iframe>
+            scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" > </iframe>
 </body>
 </html>
