--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!--个人中心-->
             <div class="personal">
                 <a href="#">个人中心 <img src="images/ling_06.png" alt=""></a>
-                <a href="#"><img src="images/tou_03.png">扎心了</a>
+                <a href="#"><img src="images/tou_03.png">扎心</a>
             </div>
             <!--搜索框-->
             <div class="search">
