--- a/index.html
+++ b/index.html
@@ -6,85 +6,6 @@
     <link href="test.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <!--结构-->
-    <!--页面头部分-->
-    <header>
-        <nav>
-            <div class="logo">
-                <img src="images/xcwlogo.png" alt="">
-            </div>
-            <!--导航栏部分-->
-            <div class="navbar">
-                <ul>
-                    <li><a href="#">首页</a></li>
-                    <li><a href="#">课程</a></li>
-                    <li><a href="#">职业规划</a></li>
-                </ul>
-            </div>
-            <!--个人中心-->
-            <div class="personal">
-                <a href="#">个人中心 <img src="images/ling_06.png" alt=""></a>
-                <a href="#"><img src="images/tou_03.png">扎心加薪傻傻分不清楚</a>
-            </div>
-            <!--搜索框-->
-            <div class="search">
-                <form action="">
-                    <input type="text" value="请输入关键词">
-                    <input type="submit" value="">
-                </form>
-            </div>
-        </nav>
-    </header>
-
-    <!--banner部分-->
-    <div class="banner">
-        <div class="banner-in container">
-            <!--左侧导航栏-->
-            <div class="slidebar">
-                <ul>
-                    <li><a href="#">前端开发 <span>></span> </a></li>
-                    <li><a href="#">后端开发 <span>></span> </a></li>
-                    <li><a href="#">移动开发 <span>></span> </a></li>
-                    <li><a href="#">人工智能 <span>></span> </a></li>
-                    <li><a href="#">商业预测 <span>></span> </a></li>
-                    <li><a href="#">云计算&大数据 <span>></span> </a></li>
-                    <li><a href="#">运维&测试 <span>></span> </a></li>
-                    <li><a href="#">UI设计 <span>></span> </a></li>
-                    <li><a href="#">产品经理 <span>></span> </a></li>
-                </ul>
-            </div>
-            <!--小课表部分-->
-            <dl class="timetable">
-                <dt>我的课程表</dt>
-                <dd>
-                    <h4>继续学习 程序语言设计</h4>
-                    <p>正在学习-使用对象</p>
-                </dd>
-                <dd>
-                    <h4>继续学习 程序语言设计</h4>
-                    <p>正在学习-使用对象</p>
-                </dd>
-                <dd>
-                    <h4>继续学习 程序语言设计</h4>
-                    <p>正在学习-使用对象</p>
-                </dd>
-                <dd>
-                    <a href="#">个人课程</a>
-                </dd>
-            </dl>
-        </div>
-    </div>
-
-    <!--精品推荐-->
-    <div class="recommend container">
-        <a href="#">精品推荐</a>
-        <a href="#">Jquery</a>
-        <a href="#">Spart</a>
-        <a href="#">MySql</a>
-        <a href="#">Javascript</a>
-        <a href="#">Python</a>
-        <a href="#">Php</a>
-        <a href="#">修改兴趣</a>
-    </div>
+    <h1>太扎心了吧！！！<h1>
 </body>
 </html>
